# try-aya

./: Cargo.toml  README.md
try-aya/: Cargo.toml
try-aya-common/: Cargo.toml
try-aya-ebpf/: Cargo.toml
try-aya-ebpf/src/: main.rs
try-aya/src/: main.rs
xtask/src/: build_ebpf.rs
